name:                   lvmrun
version:                1.0
synopsis:               The Lazy Virtual Machine (LVM) Runtime System.
homepage:               http://www.cs.uu.nl/wiki/bin/view/Helium/WebHome
description:

   The Lazy Virtual Machine (LVM) defines a portable instruction set and file
   format. It is specifically designed to execute languages with non-strict (or
   lazy) semantics. This cabal package defines an LVM runtime written in C. 
   The core assembler (coreasm) for compiling core programs into LVM instructions 
   and a library is defined in the lvmlib cabal package. The LVM is used 
   as a backend for the Helium compiler. More information about LVM can be 
   found in Chapter 6 of Daan Leijen's PhD Thesis, The Lambda Abroad.

   We use the Make build-type here, but it may be better to roll our own
   in a Setup.hs (tweaking one from Cabal itself). An example is the grammatical
   package by Angelov and others. We may need this anyway for Helium (compiling
   the libs for example). The dependencies are provided in the Cabal file, and
   their generation is not handled by Cabal. Instead, if you change dependencies
   please run `make depend'. This occurs extremely rarely, though.
   The Fornothing.hs is only there to please Cabal. Please, also ignore
   the message of Cabal:
     cabal: ..../some-ghc/lib/lvmrun-.../bin: does not exist
   
category:               Compilers/Interpreters
copyright:              (c) 2012
license:                LGPL
license-file:           LICENSE.txt
author:                 Daan Leijen, Bastiaan Heeren, Jurriaan Hage, *OCAMLers*
maintainer:             helium@cs.uu.nl
stability:              provisional
extra-source-files:     CREDITS.txt
                        Makefile
                        .depend
                        configure                      
                        config/cl-i386-pc-windows/m.h 
                        config/cl-i386-pc-windows/s.h 
                        config/cl-i386-pc-windows/makefile 
                        config/tests/*.c
                        config/tests/config.guess
                        config/tests/config.guess.old
                        config/tests/config.sub
                        config/tests/hasgot
                        config/tests/runtest
                        config/tests/searchpath
                        common/*.h
                        core/*.c core/*.h
                        heap/*.c heap/*.h 
                        prim/*.c prim/*.h                        
build-type:             Make
cabal-version:          >= 1.10.1.0

source-repository head
  type:     svn
  location: https://svn.science.uu.nl/repos/sci.hage0101.lvm/trunk/src/runtime

--------------------------------------------------------------------------------

Executable lvmrun
  main-is: Fornothing.hs
  hs-source-dirs:    .
  default-language: Haskell98 

